--- a/addons/project_mail_plugin/views/project_task_views.xml
+++ b/addons/project_mail_plugin/views/project_task_views.xml
@@ -5,6 +5,6 @@
       <field name="name">Task: redirect to form in edit mode</field>
       <field name="res_model">project.task</field>
       <field name="view_mode">form</field>
-      <field name="view_id" ref="project.view_task_form2"/>
+      <field name="view_id" ref="project.project_task_view_form"/>
     </record>
 </odoo>
