--- a/addons/sale_project/views/project_task_views.xml
+++ b/addons/sale_project/views/project_task_views.xml
@@ -148,10 +148,43 @@
         </field>
     </record>
 
-    <record id="view_sale_project_inherit_form" model="ir.ui.view">
+    <record id="project_task_view_form_base_sale_project" model="ir.ui.view">
+        <field name="name">project.task.view.form.base.sale.project</field>
+        <field name="model">project.task</field>
+        <field name="inherit_id" ref="project.project_task_view_form_base"/>
+        <field name="priority">100</field>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_id']" position="attributes">
+                <attribute name="invisible">not allow_billable</attribute>
+            </xpath>
+            <field name="partner_id" position="after">
+                <field name="sale_line_id" string="Sales Order Item" invisible="not allow_billable or not project_id or not partner_id"
+                    options='{"no_open": True}' readonly="1" context="{'create': False, 'edit': False, 'delete': False}"/>
+                <field name="allow_billable" invisible="1"/>
+            </field>
+            <xpath expr="//field[@name='child_ids']/tree/field[@name='partner_id']" position="after">
+                <field name="sale_line_id" string="Sales Order Item" invisible="not partner_id" options='{"no_open": True}' readonly="1" context="{'create': False, 'edit': False, 'delete': False}"/>
+                <field name="allow_billable" invisible="1"/>
+            </xpath>
+            <xpath expr="//field[@name='child_ids']/tree/field[@name='partner_id']" position="attributes">
+                <attribute name="column_invisible">not parent.allow_billable</attribute>
+                <attribute name="invisible">not allow_billable</attribute>
+            </xpath>
+            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='partner_id']" position="after">
+                <field name="sale_line_id" string="Sales Order Item" invisible="not partner_id" options='{"no_open": True}' readonly="1" context="{'create': False, 'edit': False, 'delete': False}"/>
+                <field name="allow_billable" invisible="1"/>
+            </xpath>
+            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='partner_id']" position="attributes">
+                <attribute name="column_invisible">not parent.allow_billable</attribute>
+                <attribute name="invisible">not allow_billable</attribute>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="project_task_view_form_sale_project" model="ir.ui.view">
         <field name="name">project.task.view.inherit</field>
         <field name="model">project.task</field>
-        <field name="inherit_id" ref="project.view_task_form2"/>
+        <field name="inherit_id" ref="project.project_task_view_form"/>
         <field name="priority">100</field>
         <field name="arch" type="xml">
             <xpath expr="//span[@id='start_rating_buttons']" position="before">
@@ -164,10 +197,7 @@
                         </div>
                 </button>
             </xpath>
-            <xpath expr="//field[@name='partner_id']" position="attributes">
-                <attribute name="invisible">not allow_billable</attribute>
-            </xpath>
-            <xpath expr="//field[@name='partner_id']" position="after">
+            <field name="sale_line_id" position="replace">
                 <field name="project_sale_order_id" invisible="1"/>
                 <field name="sale_order_id" invisible="True" groups="sales_team.group_sale_salesman"/>
                 <label for="sale_line_id" invisible="not allow_billable or not project_id or not partner_id"/>
@@ -201,8 +231,8 @@
                 </div>
                 <field name="allow_billable" invisible="1"/>
                 <field name="sale_order_state" invisible="1"/>
-            </xpath>
-            <xpath expr="//field[@name='child_ids']/tree/field[@name='partner_id']" position="after">
+            </field>
+            <xpath expr="//field[@name='child_ids']/tree/field[@name='sale_line_id']" position="replace">
                 <field name="sale_line_id"
                        optional="hide"
                        options='{"no_create": True}'
@@ -211,20 +241,11 @@
                        groups="sales_team.group_sale_salesman"
                        invisible="not allow_billable"/>
                 <field name="sale_line_id" optional="hide" options="{'no_open': True}" readonly="1" groups="!sales_team.group_sale_salesman"/>
-                <field name="allow_billable" column_invisible="True"/>
             </xpath>
-            <xpath expr="//field[@name='child_ids']/tree/field[@name='partner_id']" position="attributes">
-                <attribute name="column_invisible">not parent.allow_billable</attribute>
-                <attribute name="invisible">not allow_billable</attribute>
-            </xpath>
-            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='partner_id']" position="after">
+            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='sale_line_id']" position="replace">
                 <field name="sale_line_id" optional="hide" readonly="1" groups="sales_team.group_sale_salesman"/>
                 <field name="sale_line_id" optional="hide" options="{'no_open': True}" readonly="1" groups="!sales_team.group_sale_salesman"/>
                 <field name="allow_billable" column_invisible="True"/>
-            </xpath>
-            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='partner_id']" position="attributes">
-                <attribute name="column_invisible">not parent.allow_billable</attribute>
-                <attribute name="invisible">not allow_billable</attribute>
             </xpath>
             <field name="project_id" position="attributes">
                 <attribute name="context">{'default_allow_billable': True}</attribute>
