--- a/addons/sale_timesheet/views/project_task_views.xml
+++ b/addons/sale_timesheet/views/project_task_views.xml
@@ -108,40 +108,26 @@
             </field>
         </record>
 
-        <record id="project_task_view_form_inherit_sale_timesheet" model="ir.ui.view">
-            <field name="name">project.task.form.inherit.timesheet</field>
+        <record id="project_task_view_form_base_sale_timesheet" model="ir.ui.view">
+            <field name="name">project.task.view.form.sale.timesheet</field>
             <field name="model">project.task</field>
-            <field name="inherit_id" ref="project.view_task_form2"/>
+            <field name="inherit_id" ref="project.project_task_view_form_base"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='user_ids']" position="after">
-                    <field name="is_project_map_empty" invisible="1" groups="hr_timesheet.group_hr_timesheet_user"/>
-                    <field name="has_multi_sol" invisible="1" groups="hr_timesheet.group_hr_timesheet_user"/>
+                <xpath expr="//tree[@name='timesheet_tree']/field[@name='unit_amount']" position="before">
+                    <field name="so_line" column_invisible="not parent.allow_billable" optional="hide"/>
                 </xpath>
-                 <xpath expr="//field[@name='partner_id']" position="after">
-                    <field name="pricing_type" invisible="1" groups="hr_timesheet.group_hr_timesheet_user"/>
+                <xpath expr="//tree[@name='sub_tasks_tree']/field[@name='remaining_hours']" position="after">
+                    <field name="sale_line_id" invisible="1"/>
+                    <field name="remaining_hours_available" invisible="1"/>
+                    <field name="remaining_hours_so" optional="hide" widget="timesheet_uom" attrs="{'invisible': ['|', ('sale_line_id', '=', False), ('remaining_hours_available', '=', False)]}"/>
                 </xpath>
-                <xpath expr="//field[@name='timesheet_ids']/tree" position="inside">
-                    <!-- <field name="timesheet_ids"/> is already inside a block groups="hr_timesheet.group_hr_timesheet_user"  -->
-                    <field name="is_so_line_edited" column_invisible="True"/>
+                <xpath expr="//tree[@name='blocked_by_tree']/field[@name='remaining_hours']" position="after">
+                    <field name="sale_line_id" invisible="1"/>
+                    <field name="remaining_hours_available" invisible="1"/>
+                    <field name="remaining_hours_so" optional="hide" widget="timesheet_uom" attrs="{'invisible': ['|', ('sale_line_id', '=', False), ('remaining_hours_available', '=', False)]}"/>
                 </xpath>
-                <xpath expr="//field[@name='timesheet_ids']/tree/field[@name='unit_amount']" position="before">
-                    <!-- <field name="timesheet_ids"/> is already inside a block groups="hr_timesheet.group_hr_timesheet_user"  -->
-                    <field name="timesheet_invoice_id" column_invisible="True"/>
-                    <field name="so_line" widget="so_line_field" groups="!sales_team.group_sale_salesman"
-                        column_invisible="not parent.allow_billable"
-                        readonly="readonly_timesheet"
-                        context="{'with_remaining_hours': True, 'with_price_unit': True}" options="{'no_create': True, 'no_open': True}"
-                        domain="[('is_service', '=', True), ('order_partner_id', 'child_of', parent.partner_id), ('is_expense', '=', False), ('state', '=', 'sale'), ('is_downpayment', '=', False)]"
-                        optional="hide"/>
-                    <field name="so_line" widget="so_line_field" groups="sales_team.group_sale_salesman"
-                        column_invisible="not parent.allow_billable"
-                        readonly="readonly_timesheet"
-                        context="{'with_remaining_hours': True, 'with_price_unit': True}" options="{'no_create': True, 'no_open': True}"
-                        domain="[('is_service', '=', True), ('order_partner_id', 'child_of', parent.partner_id), ('is_expense', '=', False), ('state', '=', 'sale'), ('is_downpayment', '=', False)]"
-                        optional="hide"/>
-                </xpath>
-                <xpath expr="//field[@name='remaining_hours']" position="after">
-                    <t groups="hr_timesheet.group_hr_timesheet_user">
+                <field name="remaining_hours" position="after">
+                    <t name="remaining_hours_so_data">
                         <field name="sale_order_id" invisible="1"/>
                         <field name="remaining_hours_available" invisible="1"/>
                         <span id="remaining_hours_so_label" invisible="not allow_billable or not sale_order_id or not partner_id or not sale_line_id or not remaining_hours_available" class="o_td_label float-start">
@@ -156,16 +142,43 @@
                         </span>
                         <field name="remaining_hours_so" nolabel="1" widget="timesheet_uom" invisible="not allow_billable or not sale_order_id or not partner_id or not sale_line_id or not remaining_hours_available" decoration-danger="remaining_hours_so &lt; 0"></field>
                     </t>
-                </xpath>
+                </field>
             </field>
         </record>
 
-        <record id="view_task_form2_inherit_sale_timesheet" model="ir.ui.view">
-            <field name="name">view.task.form2.inherit</field>
+        <record id="project_task_view_form_sale_timesheet" model="ir.ui.view">
+            <field name="name">project.task.view.form.sale.timesheet</field>
             <field name="model">project.task</field>
-            <field name="inherit_id" ref="sale_project.view_sale_project_inherit_form"/>
+            <field name="inherit_id" ref="project.project_task_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='sale_line_id'][2]" position="attributes">
+                <xpath expr="//field[@name='user_ids']" position="after">
+                    <field name="is_project_map_empty" invisible="1" groups="hr_timesheet.group_hr_timesheet_user"/>
+                    <field name="has_multi_sol" invisible="1" groups="hr_timesheet.group_hr_timesheet_user"/>
+                </xpath>
+                 <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="pricing_type" invisible="1" groups="hr_timesheet.group_hr_timesheet_user"/>
+                </xpath>
+                <tree name="timesheet_tree" position="inside">
+                    <field name="is_so_line_edited" invisible="1"/>
+                </tree>
+                <xpath expr="//tree[@name='timesheet_tree']/field[@name='so_line']" position="replace">
+                    <field name="so_line" widget="so_line_field" groups="!sales_team.group_sale_salesman"
+                        column_invisible="not parent.allow_billable"
+                        readonly="readonly_timesheet"
+                        context="{'with_remaining_hours': True, 'with_price_unit': True}" options="{'no_create': True, 'no_open': True}"
+                        domain="[('is_service', '=', True), ('order_partner_id', 'child_of', parent.partner_id), ('is_expense', '=', False), ('state', '=', 'sale'), ('is_downpayment', '=', False)]"
+                        optional="hide"/>
+                    <field name="so_line" widget="so_line_field" groups="sales_team.group_sale_salesman"
+                        column_invisible="not parent.allow_billable"
+                        readonly="readonly_timesheet"
+                        context="{'with_remaining_hours': True, 'with_price_unit': True}" options="{'no_create': True, 'no_open': True}"
+                        domain="[('is_service', '=', True), ('order_partner_id', 'child_of', parent.partner_id), ('is_expense', '=', False), ('state', '=', 'sale'), ('is_downpayment', '=', False)]"
+                        optional="hide"/>
+                </xpath>
+                <t name="remaining_hours_so_data" position="attributes">
+                    <attribute name="groups">hr_timesheet.group_hr_timesheet_user</attribute>
+                </t>
+                <xpath expr="//field[@name='sale_line_id']" position="attributes">
                     <attribute name="context">{
                         'create': False, 'edit': False, 'delete': False,
                         'with_price_unit': True,
