[IMP] stock: fix "Apply All" button in Update Quantity
If more than one line was selected, and the cursor was still in the
"quantity" field of the last line while the "Apply All" button was
pressed, then the last quant was not applied. It was applied correctly
if the cursor left the editable field before applying all quants (i.e.
the user had to click somewhere outside the last quant line).

The solution was to remove the custom JS code that handled "Apply All"
and add the button to the `header` element in the view. A new Python
action was created to handle the logic.

closes odoo/odoo#135104

Task: 3444808
Related: odoo/enterprise#53382
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock/views/stock_quant_views.xml
+++ b/addons/stock/views/stock_quant_views.xml
@@ -444,6 +444,11 @@ in this location. That leads to a negative stock.
         <field name="arch" type="xml">
             <tree default_order="location_id, inventory_date, product_id, package_id, lot_id, owner_id" decoration-warning='is_outdated' editable="bottom" create="1" edit="1" import="1" js_class="inventory_report_list" sample="1">
                 <header>
+                    <button name="action_apply_all" string="Apply All" type="object"
+                            class="btn btn-secondary"
+                            invisible="not context.get('inventory_mode') or context.get('inventory_report_mode')"
+                            display="always"
+                        />
                     <button name="action_inventory_at_date" string="Inventory at Date" type="object"
                             invisible="((context.get('inventory_mode') and not context.get('inventory_report_mode')) or context.get('no_at_date'))"
                             class="btn-primary ms-1"
