--- a/addons/project/static/src/components/subtask_kanban_list/subtask_kanban_list.scss
+++ b/addons/project/static/src/components/subtask_kanban_list/subtask_kanban_list.scss
@@ -17,5 +17,10 @@
 
     .subtask_list_row:hover {
         background-color: $table-hover-bg;
+        @include media-breakpoint-up(sm) {
+            .o_field_widget.o_field_many2many_tags_avatar .o_quick_assign {
+                visibility: visible !important;
+            }
+        }
     }
 }
