[IMP] website: add an aria-label on the extra item anchor
The goal of this commit is to add an `aria-label` attribute on the
"extra item" anchor in order to improve the accessibility of the website
pages and avoid a warning of type `Links do not have a discernible
name`. However, as the logic responsible of the creation of this anchor
is in a non lazy loaded file, the translate function `_t()` (located in
a lazy loaded file) can not be used to translate the value of the
`aria-label` attribute. To solve the problem, this value has been put in
the `data-extra-items-toggle-aria-label` attribute on the header. The
translated value is then extracted and added in the `aria-label`
attribute at the extra items button creation.

Part-of: odoo/odoo#140453
Co-authored-by: qsm-odoo <qsm@odoo.com>

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -152,6 +152,7 @@
 
     <xpath expr="//header" position="attributes">
         <attribute name="data-name">Header</attribute>
+        <attribute name="t-att-data-extra-items-toggle-aria-label">extra_items_toggle_aria_label</attribute>
     </xpath>
 
     <xpath expr="//header/t[@t-cache]" position="attributes">
@@ -164,6 +165,7 @@
     <xpath expr="//header" position="before">
         <t t-set="cta_btn_text" t-value="False"/>
         <t t-set="cta_btn_href">/contactus</t>
+        <t t-set="extra_items_toggle_aria_label">Extra items button</t>
     </xpath>
 
     <xpath expr="//footer" position="attributes">
