[FIX] website, website_blog, *: fix duplicated navbar ids
*: test_website_modules

In PR [1], the headers have been redesigned. One of their major changes
is that now, they have two navbars: one for the desktop view and one for
the mobile view.

However, the `o_main_nav` and `top_menu` navbar ids are also duplicated,
meaning that there are multiple elements with the same id in the DOM,
which is not a good practice.

This commit fixes this by replacing the ids by classes in the navbar
templates, since their use does not really require for them to be ids
(e.g. `#o_main_nav` is mainly for styling). For the desktop view, the
ids are still kept (for stability purpose).

Note that the CSS rules and the selectors in the JS files (except for
the tests) now take into account both the ids and the classes (to be
safe).

[1]: https://github.com/odoo/odoo/pull/119650

task-3609531

X-original-commit: 9baf37a
Part-of: odoo/odoo#155482

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -297,7 +297,8 @@ $-seen-urls: ();
     .o_menu_image_placeholder {
         width: 80px !important;
     }
-    #top_menu {
+    // TODO in master: remove the `#top_menu` selector.
+    #top_menu, .top_menu {
         flex-wrap: nowrap !important;
         &.o_menu_loading {
             overflow: hidden !important;
@@ -1034,7 +1035,8 @@ header {
         z-index: $zindex-website-header;
     }
     &:not(.o_header_no_transition) {
-        #o_main_nav {
+        // TODO in master: remove the `#o_main_nav` selector.
+        #o_main_nav, .o_main_nav {
             transition: all $-transition-duration, color 0ms;
         }
         .navbar-brand {
@@ -1073,7 +1075,8 @@ header {
         $-is-hamburger: o-website-value('header-template') == 'hamburger';
         @include media-breakpoint-up(md) {
             @if $-is-hamburger {
-                #o_main_nav {
+                // TODO in master: remove the `#o_main_nav` selector.
+                #o_main_nav, .o_main_nav {
                     padding-top: $spacer * 0.5;
                     padding-bottom: $spacer * 0.5;
                 }
@@ -1081,7 +1084,8 @@ header {
         }
     }
 
-    #o_main_nav {
+    // TODO in master: remove the `#o_main_nav` selector.
+    #o_main_nav, .o_main_nav {
         flex-direction: inherit;
     }
 
@@ -1141,7 +1145,8 @@ header {
                         max-width: 100%;
                         padding: 0 0 $spacer 0;
                     }
-                    #o_main_nav {
+                    // TODO in master: remove the `#o_main_nav` selector.
+                    #o_main_nav, .o_main_nav {
                         flex-direction: column;
                         align-items: start;
                         padding: 0;
