--- a/addons/point_of_sale/views/pos_delivery_service.xml
+++ b/addons/point_of_sale/views/pos_delivery_service.xml
@@ -18,7 +18,7 @@
                     <group>
                         <field name="client_id" />
                         <field name="client_secret" />
-                        <field name="journal_id" />
+                        <field name="payment_method_id" />
                         <field name="is_test" />
                         <field name="active" />
                     </group>
