--- a/addons/point_of_sale/views/res_config_settings_views.xml
+++ b/addons/point_of_sale/views/res_config_settings_views.xml
@@ -51,7 +51,7 @@
                         </block>
                         <block title="Payment" id="pos_payment_section">
                             <setting id="payment_methods_new" string="Payment Methods" help="Payment methods available">
-                                <field name="pos_payment_method_ids" colspan="4" widget="many2many_tags" readonly="pos_has_active_session" required="pos_company_has_template" options="{'no_create': True}" />
+                                <field name="pos_payment_method_ids" colspan="4" widget="many2many_tags" readonly="pos_has_active_session" required="pos_company_has_template" options="{'no_create': True}" domain="[('delivery_payment_method', '=', False)]"/>
                                 <div>
                                     <button name="%(action_payment_methods_tree)d" icon="oi-arrow-right" type="action" string="Payment Methods" class="btn-link"/>
                                 </div>
@@ -370,7 +370,7 @@
 
                         <block title="Food Delivery Services" id="pos_food_delivery_services">
                             <setting string="Deliveroo" help="Integrate Deliveroo in POS">
-                                <field name="pos_delivery_service_ids"/>
+                                <field name="pos_delivery_service_ids" widget="many2many_tags"/>
                             </setting>
                         </block>
 
