[FIX] web: add twitter X font-awesome icon
Prior to this commit the new twitter X icon is not available.
This commit adds the icon under the `fa-x-twitter` class.

--- a/addons/web/static/src/scss/fontawesome_overridden.scss
+++ b/addons/web/static/src/scss/fontawesome_overridden.scss
@@ -14,6 +14,22 @@
     }
 }
 
+// This is a patch of the font awesome library to add the new "Twitter" X icon.
+@font-face {
+    font-family: 'FontAwesome-twitter-x-only';
+    src: url('../../src/fonts/twitter_x_only.woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+.fa.fa-x-twitter {
+    font-family: 'FontAwesome-twitter-x-only' !important;
+
+    &:before {
+        content: '\e61b';
+    }
+}
+
 // This is rtl language specific fix
 // It will override the font awesome symbols and flip them 180 degree
 .o_rtl {
